Colors links icons portfolio update

--- a/css/style.css
+++ b/css/style.css
@@ -1673,7 +1673,7 @@ body .symp-btn:hover {
 }
 #portfolio-filters > ul > li > a.active{
 	font-size:50px;
-	color: #b00ff0;
+	color: #659EC7;
 }
 #portfolio-filters > ul > li > a{
 	font-size:50px;
