footer xx-large

--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ body.section-show .section.active{
 	font-size:14px;
 	line-height:1em;
 	vertical-align:middle;
-	font-size: x-large;
+	font-size: xx-large;
 }
 .footer-social > li > a:hover{
 	background:#B7A389;
