--- a/css/style.css
+++ b/css/style.css
@@ -846,9 +846,10 @@ body.section-show .transition-mask:before{
 	float:right;
 }
 .timeline > li > .timeline-desc > h4{
-	font-size:14px;
+	font-size:35px;
 	letter-spacing:2px;
 	margin-top:0;
+	color: #659EC7;
 }
 .timeline > li > .timeline-content{
 	float:left;
