--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5, h6,
 	border:solid 2px #FFF;
 }
 ::-webkit-scrollbar-thumb:hover{
-	background:#00BFFF;
+	background:#73C2FB;
 }
 ::-moz-scrollbar{
 	height:10px;
@@ -40,7 +40,7 @@ h1, h2, h3, h4, h5, h6,
 	border:solid 2px #FFF;
 }
 ::-moz-scrollbar-thumb:hover{
-	background:#00BFFF;
+	background:#73C2FB;
 }
 img{
 	max-width:100%;
@@ -190,7 +190,7 @@ body.section-show .section.active{
 	margin-top:3.5px;
 	font-style:italic;
 	font-family:'Playfair Display', serif;
-	color:#659EC7;
+	color:#73C2FB;
 }
 .footer-social{
 	margin:0;
@@ -220,7 +220,7 @@ body.section-show .section.active{
 	transition:all .3s ease-in-out;
 	display:block;
 	text-align:center;
-	color:#659EC7;
+	color:#73C2FB;
 	background:#F0F0F0;
 	font-size:0;
 }
@@ -257,12 +257,12 @@ body.section-show .section.active{
 }
 #propio {
 	padding-top: 50px;
-	color: #00BFFF;
+	color: #73C2FB;
 }
 
 .propio {
 	padding-top: 50px;
-	color: #00BFFF;
+	color: #73C2FB;
 }
 
 
@@ -308,7 +308,7 @@ body.section-show .section.active{
 .divider-draft{
 	position:relative;
 	height:2px;
-	background:#659EC7;
+	background:#73C2FB;
 	width:40px;
 	display:block;
 	margin:15px 0;
@@ -318,7 +318,7 @@ body.section-show .section.active{
 	content: ' ';
 	width:25px;
 	height:1px;
-	background:#659EC7;
+	background:#73C2FB;
 	position:absolute;
 	left:0;
 }
@@ -570,7 +570,7 @@ body.section-show .transition-mask:before{
 	-moz-transition:all .3s ease;
 	transition:all .3s ease;
 	position:relative;
-	color:#659EC7;
+	color:#73C2FB;
 	text-align:left;
 	text-transform:uppercase;
 	letter-spacing:3px;
@@ -600,12 +600,12 @@ body.section-show .transition-mask:before{
 	display:none;
 }
 .front-person-links > ul > li > a:hover{
-	color:#659EC7;
+	color:#73C2FB;
 }
 .front-person-links > ul > li > a:hover:after,
 .front-person-links > ul > li > a:hover:before{
 	width:25px;
-	background:#659EC7;
+	background:#73C2FB;
 }
 /*=======================================================================
 	About Section
@@ -683,7 +683,7 @@ body.section-show .transition-mask:before{
 .funfacts-block{
 	padding-top:60px;
 	padding-bottom:20px;
-	background-color:#659EC7;
+	background-color:#73C2FB;
 	background-size:cover;
 	background-attachment:fixed;
 }
@@ -824,7 +824,7 @@ body.section-show .transition-mask:before{
 	margin-left:-1px;
 	height:100%;
 	width:1px;
-	background:#659EC7;
+	background:#73C2FB;
 	border-radius: 0 0 5px 5px;
 }
 .timeline > li:before,
@@ -842,7 +842,7 @@ body.section-show .transition-mask:before{
 	font-size:35px;
 	letter-spacing:2px;
 	margin-top:0;
-	color: #659EC7;
+	color: #73C2FB;
 }
 .timeline > li > .timeline-content{
 	float:left;
@@ -1045,7 +1045,7 @@ body.section-show .transition-mask:before{
 	background:#ADDFFF;
 }
 .skill > .skill-bar > .bar{
-	background:#659EC7;
+	background:#73C2FB;
 	height:100%;
 	width:0;
 	position:relative;
@@ -1053,7 +1053,7 @@ body.section-show .transition-mask:before{
 .skill > .skill-bar > .bar > .percent{
 	position:absolute;
 	padding:4px 7px;
-	background:#659EC7;
+	background:#73C2FB;
 	color:#FFF;
 	bottom:100%;
 	right:0;
@@ -1368,7 +1368,7 @@ body .symp-btn{
 	*display:inline;
 	*zoom:1;
 	padding:12px 22px;
-	background:#659EC7;
+	background:#73C2FB;
 	color:#FFF;
 	-webkit-transition:all .3s ease;
 	-moz-transition:all .3s ease;
@@ -1389,7 +1389,7 @@ body .symp-btn:hover {
 }
 .symp-btn.link-btn{
 	background:transparent;
-	color:#659EC7;
+	color:#73C2FB;
 }
 .symp-btn.link-btn > i{
 	margin-right:8px;
@@ -1665,7 +1665,7 @@ body .symp-btn:hover {
 }
 #portfolio-filters > ul > li > a{
 	display:block;
-	color:#659EC7;
+	color:#73C2FB;
 	text-decoration:none;
 	font-size: 50px;
 }
@@ -1675,7 +1675,7 @@ body .symp-btn:hover {
 }
 #portfolio-filters > ul > li > a.active{
 	font-size:50px;
-	color: #659EC7;
+	color: #73C2FB;
 }
 #portfolio-filters > ul > li > a{
 	font-size:50px;
@@ -1787,7 +1787,7 @@ body .symp-btn:hover {
 		color: #0000FF;
 }
 .seeitworking {
-	color: #659EC7;
+	color: #73C2FB;
 }
 .seeitworking :hover{
 	color: #0000FF;
@@ -1995,7 +1995,7 @@ h1, h2, h3, h4, h5, h6,
 	border:solid 2px #FFF;
 }
 ::-webkit-scrollbar-thumb:hover{
-	background:#00BFFF;
+	background:#73C2FB;
 }
 ::-moz-scrollbar{
 	height:10px;
@@ -2007,7 +2007,7 @@ h1, h2, h3, h4, h5, h6,
 	border:solid 2px #FFF;
 }
 ::-moz-scrollbar-thumb:hover{
-	background:#00BFFF;
+	background:#73C2FB;
 }
 img{
 	max-width:100%;
@@ -2151,7 +2151,7 @@ body.section-show .section.active{
 	margin-top:3.5px;
 	font-style:italic;
 	font-family:'Playfair Display', serif;
-	color:#659EC7;
+	color:#73C2FB;
 }
 .footer-social{
 	margin:0;
@@ -2181,7 +2181,7 @@ body.section-show .section.active{
 	transition:all .3s ease-in-out;
 	display:block;
 	text-align:center;
-	color:#659EC7;
+	color:#73C2FB;
 	background:#F0F0F0;
 	font-size:0;
 }
@@ -2218,12 +2218,12 @@ body.section-show .section.active{
 }
 #propio {
 	padding-top: 50px;
-	color: #00BFFF;
+	color: #73C2FB;
 }
 
 .propio {
 	padding-top: 50px;
-	color: #00BFFF;
+	color: #73C2FB;
 }
 
 
@@ -2269,7 +2269,7 @@ body.section-show .section.active{
 .divider-draft{
 	position:relative;
 	height:2px;
-	background:#659EC7;
+	background:#73C2FB;
 	width:40px;
 	display:block;
 	margin:15px 0;
@@ -2279,7 +2279,7 @@ body.section-show .section.active{
 	content: ' ';
 	width:25px;
 	height:1px;
-	background:#659EC7;
+	background:#73C2FB;
 	position:absolute;
 	left:0;
 }
@@ -2530,7 +2530,7 @@ body.section-show .transition-mask:before{
 	-moz-transition:all .3s ease;
 	transition:all .3s ease;
 	position:relative;
-	color:#659EC7;
+	color:#73C2FB;
 	text-align:left;
 	text-transform:uppercase;
 	letter-spacing:3px;
@@ -2560,12 +2560,12 @@ body.section-show .transition-mask:before{
 	display:none;
 }
 .front-person-links > ul > li > a:hover{
-	color:#659EC7;
+	color:#73C2FB;
 }
 .front-person-links > ul > li > a:hover:after,
 .front-person-links > ul > li > a:hover:before{
 	width:25px;
-	background:#659EC7;
+	background:#73C2FB;
 }
 /*=======================================================================
 	About Section
@@ -2641,7 +2641,7 @@ body.section-show .transition-mask:before{
 .funfacts-block{
 	padding-top:60px;
 	padding-bottom:20px;
-	background-color:#659EC7;
+	background-color:#73C2FB;
 	background-size:cover;
 	background-attachment:fixed;
 }
@@ -2782,7 +2782,7 @@ body.section-show .transition-mask:before{
 	margin-left:-1px;
 	height:100%;
 	width:1px;
-	background:#659EC7;
+	background:#73C2FB;
 	border-radius: 0 0 5px 5px;
 }
 .timeline > li:before,
@@ -2800,7 +2800,7 @@ body.section-show .transition-mask:before{
 	font-size:35px;
 	letter-spacing:2px;
 	margin-top:0;
-	color: #659EC7;
+	color: #73C2FB;
 }
 .timeline > li > .timeline-content{
 	float:left;
@@ -3000,7 +3000,7 @@ body.section-show .transition-mask:before{
 	background:#ADDFFF;
 }
 .skill > .skill-bar > .bar{
-	background:#659EC7;
+	background:#73C2FB;
 	height:100%;
 	width:0;
 	position:relative;
@@ -3008,7 +3008,7 @@ body.section-show .transition-mask:before{
 .skill > .skill-bar > .bar > .percent{
 	position:absolute;
 	padding:4px 7px;
-	background:#659EC7;
+	background:#73C2FB;
 	color:#FFF;
 	bottom:100%;
 	right:0;
@@ -3321,7 +3321,7 @@ body .symp-btn{
 	*display:inline;
 	*zoom:1;
 	padding:12px 22px;
-	background:#659EC7;
+	background:#73C2FB;
 	color:#FFF;
 	-webkit-transition:all .3s ease;
 	-moz-transition:all .3s ease;
@@ -3342,7 +3342,7 @@ body .symp-btn:hover {
 }
 .symp-btn.link-btn{
 	background:transparent;
-	color:#659EC7;
+	color:#73C2FB;
 }
 .symp-btn.link-btn > i{
 	margin-right:8px;
@@ -3618,7 +3618,7 @@ body .symp-btn:hover {
 }
 #portfolio-filters > ul > li > a{
 	display:block;
-	color:#659EC7;
+	color:#73C2FB;
 	text-decoration:none;
 	font-size: 50px;
 }
@@ -3628,7 +3628,7 @@ body .symp-btn:hover {
 }
 #portfolio-filters > ul > li > a.active{
 	font-size:50px;
-	color: #659EC7;
+	color: #73C2FB;
 }
 #portfolio-filters > ul > li > a{
 	font-size:50px;
@@ -3739,7 +3739,7 @@ body .symp-btn:hover {
 		color: #0000FF;
 }
 .seeitworking {
-	color: #659EC7;
+	color: #73C2FB;
 }
 .seeitworking :hover{
 	color: #0000FF;
