--- a/css/style.css
+++ b/css/style.css
@@ -1203,8 +1203,7 @@ body .symp-btn:hover {
         margin: 5rem;
     }
     .title-bgcv{
-        font-size: 55px;
-    }
+        font-size: 70px;    }
     .title-bgserv{
         font-size: 45px;
     }
