--- a/css/style.css
+++ b/css/style.css
@@ -1081,7 +1081,12 @@ body .symp-btn:hover {
 .pad404 {
     padding-top: 2rem;
 }
-
+.tamanologo{
+    width: 90%;
+}
+.espacio{
+    padding-top: 4rem;
+}
 /*=############################################################################
 /*=######################### MEDIA QUERY CHICOS  ##############################
 /*=############################################################################ */
